--- a/source/_posts/俺的开发利器们.md
+++ b/source/_posts/俺的开发利器们.md
@@ -87,5 +87,6 @@ MacBook Pro Retina 15-inch，虽然是公司发的，但是如果自己配，也
 
 相当于 Windows 下的 Fiddler。
 
-
-最后，*Thank You & Enjoy it！*
+{% centerquote %}
+Thank You & Enjoy It！
+{% endcenterquote %}
