--- a/source/_posts/俺的开发利器们.md
+++ b/source/_posts/俺的开发利器们.md
@@ -1,7 +1,7 @@
 title: 俺的开发利器们
 date: 2015-10-07 14:32:04
 tags: 工具
-categories: 技术杂谈g
+categories: 技术杂谈
 ---
 
 对于一个工程师，各种开发工具就犹如他们手中的刀剑，陪伴他们驰骋战场，披荆斩棘。同时每个人也有自己最适应的武器，来提升工作、学习效率。
