--- a/source/_posts/2015阿里巴巴D2前端论坛-参会总结.md
+++ b/source/_posts/2015阿里巴巴D2前端论坛-参会总结.md
@@ -81,7 +81,7 @@ PS：使用 NodeJS 的原因其实是笔者脑洞的。其实他们选择用 Nod
 
 之前对 React JS 研究得并不深，所以分享只是大概了解下。
 
-在 @承玉（Kissy之父）分享蚂蚁金融的前端架构时，被提问，为什么是基于React而不是基于Web Components？承玉觉得标准不一定好用。
+在 @承玉（Kissy之父）分享蚂蚁金融的前端架构时，被提问，为什么是基于React而不是基于Web Components？承玉觉得标准不一定好用。（此处摘与 @徐飞 民工叔的知乎答案）
 
 ### 工具
 
