--- a/source/_posts/2015阿里巴巴D2前端论坛-参会总结.md
+++ b/source/_posts/2015阿里巴巴D2前端论坛-参会总结.md
@@ -6,6 +6,8 @@ tags:
 categories: 分享
 ---
 
+![第10届D2前端技术论坛](http://ww1.sinaimg.cn/large/71c50075gw1ez9peneckhj21hc0le0y6.jpg)
+
 去杭州参加了，阿里巴巴第10届D2前端论坛，主题是『融合』，可以说受益匪浅。上一次D2，笔者是从自身技术的角度去听了分享，而此次，却是从团队技术方向和解决方案的角度去听，不同的角度有不同的收获。
 
 对于论坛的主线，大概分成三个方向：
@@ -28,9 +30,11 @@ categories: 分享
 
 从这五点来看，React Native 非常注重开发者的体验，这也是 React Native 火遍全球的原因之一。
 
+![React Native](http://ww2.sinaimg.cn/large/71c50075gw1ez9prd6wv5j20dc07ot95.jpg)
+
 但，从业务需求上看 **使用 React Native 成本还是比较高的**。一方面，业务的学习迁移成本还是比较高的；另一方面，iOS和Android两个平台分别开发，代码复用率只有 85% 左右，而且对 Touch 平台的兼容也并不是太好（来自阿里手淘团队的分享）。
 
-而另一位来自淘宝的 @元彦 分享了基于 React Native 的适配 iOS、Android、Touch 三平台的框架 Portal，并计划本月底开源，具体细节还没公布（地址为：[https://github.com/taobaofed/react-web](https://github.com/taobaofed/react-web)）。对于Portal，有同仁总结其最大的特点是 **衣帽间业务层代码在无线 Web 和 Native 双平台上实现了 100% 复用率。**。（Portal 提供了 React-Web 部分，来适配 Touch 端的展现。） 这套架构的核心是Generator，**发布时代码通过Generator进行打包，分发到各个平台**。具体细节还没有放出，等开源之后可以详细研究其代码结构。最后，这套框架暂时没有使用在阿里核心的业务上，这种方案是否有效，还有待考证。
+而另一位来自淘宝的 @元彦 分享了基于 React Native 的适配 iOS、Android、Touch 三平台的框架 Portal，并计划本月底开源，具体细节还没公布（地址为：[https://github.com/taobaofed/react-web](https://github.com/taobaofed/react-web)）。对于Portal，有同仁总结其最大的特点是 **衣帽间业务层代码在无线 Web 和 Native 双平台上实现了 100% 复用率。**（Portal 提供了 React-Web 部分，来适配 Touch 端的展现。） 这套架构的核心是Generator，**发布时代码通过Generator进行打包，分发到各个平台**。具体细节还没有放出，等开源之后可以详细研究其代码结构。最后，这套框架暂时没有使用在阿里核心的业务上，这种方案是否有效，还有待考证。
 
 至此，可以对 React Native 做个简单的总结：**对于原有业务，迁移到React Native 的成本还是比较高的；对于新业务，多端平台代码复用的问题有待考证。**
 
@@ -40,11 +44,15 @@ categories: 分享
 
 回到分享，手淘分享了他们的方案，他们的方案是 **将Native覆盖在WebView上**，提供 TableView、TabBar、Slider、SideBar四个Native组件，通过引擎将模板渲染成Native和Webview混合的UI，比较固定或者高性能的部分用native，动态内容用web，一起拼装。
 
+![手淘的整体架构（盗自 @yuanyuan 的知乎）](http://ww2.sinaimg.cn/large/71c50075gw1ez9pokagezj218a0gcwi3.jpg)
+
 刚好，另一个会场分享 Baidu 的同学分享 Clouda+ 的 [Blend UI](http://clouda.baidu.com/blendui/introduction/introduction)，和手淘的方案很类似，下面是 Blend UI 的特征：
 
 * 多Webview控制能力。让一个Webapp拆到多个webview中运行，并能用Javascript来调度，解决了页面过大导致卡顿的问题，同时，webview的转场动画由Native代码实现，也解决了转场动画不流畅的问题。
 
 * Native组件嵌入能力。能将Native控件嵌入Webview中，这样就能让页面中那些性能较差的部分用Native来实现，以最大化地提高体验和交互。
+
+![Blend UI](http://ww2.sinaimg.cn/large/71c50075gw1ez9ptmyqmcj210b0l7dhu.jpg)
 
 当然这种方案也有一些问题，例如 Native 和 WebView 的滚动不同步，考虑限制 Native 大部分为 Fixed，对业务限制比较大等等。
 
@@ -63,6 +71,8 @@ categories: 分享
 ### NodeJS 在大型场景中的应用和性能优化
 
 NodeJS，从前几年只被看好，到现在已经应用到类似大型业务项目中，竞争力逐渐显现。用 NodeJS 要比 Spring 好？比 PHP 快？这些都是相对于言的。NodeJS 已经用在了 **天猫** 和 **Qzone** 两个大型项目中，这足可以证明 NodeJS 的能力。
+
+![吸引眼球的NodeJS](http://www.html5china.com/uploads/allimg/111218/161PC4H-1.png)
 
 @不四 讲了天猫的 NodeJS 方案，而腾讯的同学讲了 QZone 的方案。其实大同小异，主要的内容就几项：
 
@@ -86,7 +96,7 @@ PS：使用 NodeJS 的原因其实是笔者脑洞的。其实他们选择用 Nod
 
 关于工具，笔者关注了一下 Web接口管理工具RAP，一个阿里系的接口管理工具。
 
-![图](https://camo.githubusercontent.com/e37481e2ed001654ab426d5a489d8c5fbdb893f0/687474703a2f2f67746d7330342e616c6963646e2e636f6d2f7470732f69342f544231397467554b565858585858415858585841684342355658582d313232322d3634362e706e67)
+![图](http://ww4.sinaimg.cn/large/71c50075gw1ez9pw2fk7sj20xy0hy0w1.jpg)
 
 有兴趣的同学可以关注下，简单看了一下，功能非常全，对于电商场景比较适用。
 
